--- a/styles/hero.css
+++ b/styles/hero.css
@@ -3,6 +3,10 @@ section.hero {
     width: 100%;
     padding: 2.5rem 2rem;
     margin-inline: auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    overflow: hidden;
 
     h1 div {
         display: inline-block;
@@ -28,7 +32,7 @@ section.hero {
 
     h1 span {
         display: block;
-        animation: slideUp 6s infinite ease;
+        animation: slideUp 5s 2s infinite ease;
     }
 
     & .buttons {
@@ -55,19 +59,88 @@ section.hero {
                 display: flex;
             }
 
-            & .shadow {
-                box-sizing: 
-                0 2px 5px rgb(0,0,0 / .1),
-                0 9px 9px rgb(0,0,0 / .09),
-                0 20px 12px rgb(0,0,0 / .05),
-                0 36px 15px rgb(0,0,0 / .01)
-                ;
-            }
-
             &:hover{
                 transform: scale(1.1);
             }
         }
+        
+    }
+
+    & >  div:nth-child(2) {
+        display: block;
+        width: 100%;
+        max-width: 30.5rem;
+        height: 30.5rem;
+        
+        & .content {
+            width: 100%;
+            height: 100%;
+            position: relative;
+        }
+
+        & img {
+            position: absolute;
+            width: 100%;
+        }
+
+        & img[scr*="ellipse"] {
+            width: 94%;
+            top: 3%;
+            left: 3%;
+            transform: translateX(200%);
+            animation: slideIn 3s 200ms ease forwards;
+        }
+
+        & img[src*="patins"] {
+            z-index: 1;
+            transform: translateX(200%);
+            animation: slideIn 3s ease forwards;
+        }
+
+        & img[src*="stars-1"]{
+            max-width: 5.5rem;
+            top: 30%;
+            z-index: 0;
+
+            opacity: 0;
+            transform: translateX(400%);
+            animation: slideIn 3s 800ms ease forwards, appear 100ms 800ms forwards;
+        }
+
+        & img[src*="stars-2"]{
+            max-width: 2.5rem;
+            bottom: 35%;
+            right: 0;
+            z-index: 0;
+            transform: translateX(400%);
+            animation: slideIn 2.2 800ms ease forwards;
+        }
+     }
+}
+.shadow {
+     box-shadow:  
+    0 2px 5px rgb(0 0 0  / .1),
+    0 9px 9px rgb(0 0 0  / .09),
+    0 20px 12px rgb(0 0 0  / .05),
+    0 36px 15px rgb(0 0 0  / .01)
+    ; 
+    /* background-color: yellowgreen; */
+}
+
+@keyframes slideIn {
+
+    50% {
+        transform: translateX(-20px);
+    }
+
+    100% {
+        transform: translateX(0);
+    }
+}
+
+@keyframes appear {
+    to{
+        opacity: 1;
     }
 }
 
