--- a/styles/global.css
+++ b/styles/global.css
@@ -15,7 +15,7 @@
     --highlighs: #000000;
     --bg-color: #fafafa;
 
-    --ff-base: 'Monteserrat', sans-serif
+    --ff-base: 'Monteserrat', sans-serif;
     --text-sm: 0.875rem;
     --text-base : 1rem;
     --text-lg: 2.5rem;
@@ -28,6 +28,7 @@ html, button {
 
 h1, h2 {
     font-family: 'Syne', sans-serif;
+    
 }
 
 h1 {
